# auditoria-lancamentos

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Makefile  README.md  commitlint.config.mjs  package.json  pnpm-lock.yaml
.agents-hub/: .template-rev  config.env  preflight.sh  sprint-cost.json  sprint-state.json
.github/: pull_request_template.md
Docs/: AUDITORIA_OMIE_INTEGRACAO.md  AVALIACAO_GERAL.md  PLANO_IMPLEMENTACAO.md  PLANO_PROXIMOS_PASSOS.md  PLANO_S20_AUDITORIA_CONTINUA.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 4a2f9e8b1c3d_s11_fix_review_race_period_detail.py  7e3b9d2a5c4f_s16_anomaly_indexes.py  86d463d5c022_initial_schema_s2.py  a3d5e1c9f7b2_s2_remove_orphan_anomaly_types.py  b2f7c4a9d318_fase1_session_account_type.py  b6f1c4d29e57_s16_search_blind_index.py  c8f3407fb8d3_s7_add_omie_accounts_synced_at_to_.py  d1e8a4b9f2c5_soft_delete_reconciliation_sessions.py  e7a1c9d4b820_s3_client_dek_wrapped.py  f2a7c9d31b84_s2_add_days_diff_file_entries.py  f4d1a7c93e20_fase1_situation_divergente_wrong_date.py  f9b3d5e12a44_s3_access_audit.py
apps/api/app/: __init__.py  main.py
apps/api/app/cli/: __init__.py  alert_synthetic_check.py
apps/api/app/core/: alerting.py  audit.py  config.py  crypto.py  crypto_service.py  dependencies.py  exceptions.py  kms.py  logging.py  rate_limit.py  redis_config.py  search_index.py  security.py  telemetry.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/models/: __init__.py  _mixins.py  access_audit.py  anomaly_type.py  client.py  client_assignment.py  omie_account_cache.py  reconciliation_anomaly.py  reconciliation_file_entry.py  reconciliation_omie_entry.py  reconciliation_session.py  user.py
apps/api/app/integrations/anthropic/: __init__.py  client.py  model_limits.py  prompts.py  schemas.py  tools.py
apps/api/app/integrations/omie/: client.py  lancamento_cache.py  mock_client.py  schemas.py
apps/api/app/modules/anomaly_types/: __init__.py  repository.py  routes.py  schemas.py  service.py
apps/api/app/modules/auth/: repository.py  routes.py  schemas.py  service.py
apps/api/app/modules/clients/: __init__.py  accounts_cache.py  omie_factory.py  repository.py  routes.py  schemas.py  service.py
apps/api/app/modules/omie_data/: __init__.py  routes.py  schemas.py  service.py
apps/api/app/modules/reconciliations/: __init__.py  parse_service.py  repository.py  routes.py  schemas.py  service.py
apps/api/app/modules/reconciliations/export/: __init__.py  routes.py  schemas.py  service.py  styles.py  workbook.py
apps/api/app/modules/reconciliations/processing/: __init__.py  anomalies.py  balances.py  checksum.py  dispatcher.py  job.py  matcher.py  omie_fetch.py
apps/api/app/modules/reconciliations/qualification/: __init__.py  historical.py  outliers.py  schemas.py  semantic.py  service.py
apps/api/app/modules/reconciliations/review/: __init__.py  repository.py  routes.py  schemas.py  service.py
apps/api/app/modules/system/: routes.py  schemas.py
apps/api/app/modules/users/: repository.py  routes.py  schemas.py  service.py
apps/api/app/utils/: magic_bytes.py  upload.py
apps/api/app/workers/: arq_worker.py  entrypoint.py
apps/api/scripts/: capture_omie_fixtures.py  mark_stuck_sessions_as_error.py  rotate_encryption_key.py  run_worker.py  seed_demo_client.py  seed_dev.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/omie/: README.md
apps/api/tests/integration/: test_access_audit.py  test_alert_endpoint.py  test_anomaly_types.py  test_auth.py  test_client_detail.py  test_clients.py  test_create_reconciliation.py  test_db_models.py  test_export_endpoint.py  test_parse_endpoint.py  test_qualification_historical.py  test_qualification_outliers.py  test_qualification_pipeline.py  test_rbac.py  test_reconciliation_job.py  test_reconciliations.py  test_review_endpoints.py  test_rotate_encryption_key.py  test_users.py
apps/api/tests/unit/: test_alert_synthetic_check.py  test_alert_wiring.py  test_alerting.py  test_anomaly_types_seed.py  test_anthropic_client.py  test_auth_cookies.py  test_balances.py  test_checksum.py  test_crypto.py  test_crypto_envelope.py  test_crypto_service.py  test_dependencies.py  test_exceptions.py  test_export_filename.py  test_export_workbook.py  test_health.py  test_logging.py  test_magic_bytes.py  test_matcher.py  test_model_limits.py  test_omie_client.py  test_omie_fixtures.py  test_omie_lancamento_cache.py  test_parse_service.py  test_parse_service_event.py  test_rate_limit.py  test_review_service.py  test_search_index.py  test_security.py  test_session_account_type.py  test_telemetry.py  test_tool_schema_consistency.py  test_upload_limit.py
apps/api/tests/unit/qualification/: test_semantic.py
docker/: .dockerignore  Dockerfile.api  Dockerfile.web  docker-compose.yml
(+134 files in other folders)
