[project]
name = "auditoria-api"
version = "0.1.0"
description = "Backend do Sistema de Auditoria de Lançamentos — Hologram"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",       # uploads multipart/form-data

    # --- Validação / config ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # --- Banco ---
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.3",
    "psycopg[binary,pool]>=3.2.3",    # async + connection pool

    # --- Cache in-process ---
    # Background jobs rodam via FastAPI BackgroundTasks (FASE 0) — sem Redis/ARQ.
    "cachetools>=5.3",                # TTLCache LRU para cache L1 de lançamentos Omie

    # --- Segurança ---
    "cryptography>=43.0.1",           # AES-256-GCM
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",                  # uso direto (passlib é incompatível com bcrypt 5.x)

    # --- HTTP client ---
    "httpx>=0.27.2",
    "tenacity>=9.0.0",                # retry com backoff

    # --- Parsing de arquivos ---
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.4",             # fallback para PDFs complexos
    "openpyxl>=3.1.5",                # XLSX + geração de relatórios
    "pandas>=2.2.3",                  # apoio em CSV/XLSX quando necessário

    # --- Anthropic Claude ---
    "anthropic>=0.39.0",

    # --- Logging / obs ---
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.17.0",

    # --- Rate limit ---
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",                  # mock httpx
    "testcontainers[postgres]>=4.8.2",
    "hypothesis>=6.115.5",            # property-based testing
    "ruff>=0.7.1",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4.20240106",
    "types-cachetools>=5.3",
    "pip-audit>=2.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ============================================================
# Ruff — lint + format
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # warnings
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "S",    # bandit (security)
    "A",    # builtins shadow
    "ASYNC",# async misuse
    "ANN",  # annotations
    "PT",   # pytest style
    "TID",  # tidy imports
]
ignore = [
    "E501",     # line-length (black cuida)
    "ANN401",   # permitir Any em exceções raras
    "S101",     # assert — usado em testes
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]
"alembic/env.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ============================================================
# Mypy — strict
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "pandas.*", "openpyxl.*"]
ignore_missing_imports = true

# google-cloud-kms é provisionado pela task de infra (03.3/03.1); no dev/test/CI
# roda-se o wrapper local e o import é lazy, então a lib pode não estar instalada.
[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: testes unitários puros (sem I/O)",
    "integration: testes com DB/Redis/HTTP real (testcontainers)",
    "slow: testes lentos (> 1s)",
]

[tool.coverage.run]
source = ["app"]
omit = ["alembic/*", "tests/*", "app/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
